# Winter-Dragon-Bot

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  MIGRATIONS_USAGE.md  README.md  README.txt  SteamDb Servers.txt  TODO  TODO.txt  alembic.ini  app.py  bot.log.1  bot.log.2  bot.log.3  bot.log.4  config.py  create_startup.txt  discord.log.2  discord.log.4  docker-compose.yml  dockerfile  dragon_database.py  example-mainconfig.py  main.py  main.pyw  mainconfig.py  migrations.dockerfile  migrations.entrypoint.sh  pyproject.toml  pyrightconfig.json  rainbow.py  requirements-dev.txt  requirements.py  requirements.txt  ruff.toml  run.txt  servers.json  sqlalchemy.log.2  (+9 more)
backend/: README.md  __init__.py  api_plan.md  dockerfile  main.py  pyproject.toml  readme.md  requirements.txt
backend/src/: app.py  config.py  constants.py
backend/src/api/: __init__.py
backend/src/api/admin/: __init__.py
backend/src/api/oauth/: __init__.py  discord.py
backend/src/api/public/: __init__.py
backend/src/winter_dragon/backend/: __main__.py  app.py
backend/src/winter_dragon/backend/api/: __init__.py  app.py  main.py
bot/: __init__.py  __main__.py  config.py  constants.py  dockerfile  main.py  pyproject.toml  requirements.txt
bot/_types/: aliases.py  bot.py  button.py  cogs.py  error_handler.py  lobby.py  mixins.py  modal.py  tasks.py
bot/base/: __init__.py  lobby.py  mixins.py
bot/core/: __init__.py  bot.py  cogs.py  error_handler.py  log.py  tasks.py
bot/enums/: __init__.py  activity.py  channels.py
bot/errors/: __init__.py  aliases.py
bot/extensions/bot_extension/: bot_control.py  cog_handler.py  database_manager.py  emotes.py  prometheus.py  sync.py  updater.py
bot/extensions/games/: hangman.py  incremental.py  league_of_legends.py  love_meter.py  never_have_i_ever.py  would_you_rather.py
bot/extensions/indev/: car_fuel.py  command_control.py  games.py  gatekeeper.py  incremental.py  incremental.py.disabled  infractions.py  initialize.py  lol_clash.py  looking_for_group.py  rock_paper_scissors.py  tic_tac_toe.py  translate.py
bot/extensions/server/: announcement.py  auto_assign.py  autochannel.py  ban.py  channel_utils.py  log_channels.py  purge.py  role_reminder.py  stats.py  welcome.py
bot/extensions/user/: reminder.py  steam.py  urban.py
bot/extensions/utility/: invite.py  team.py  uptime.py
bot/src/: config.py  constants.py
bot/src/core/: bot.py  cogs.py  error_handler.py  tasks.py
bot/src/errors/: __init__.py
bot/src/extensions/bot_extension/: bot_control.py  cog_handler.py  database_manager.py  emotes.py  prometheus.py  sync.py  updater.py
bot/src/extensions/games/: hangman.py  incremental.py  league_of_legends.py  love_meter.py  never_have_i_ever.py  would_you_rather.py
bot/src/extensions/indev/: games.py  gatekeeper.py  lol_clash.py
bot/src/extensions/server/: announcement.py  auto_assign.py  autochannel.py  ban.py  channel_utils.py  log_channels.py  purge.py  role_reminder.py  stats.py  welcome.py
bot/src/extensions/user/: reminder.py  steam.py  urban.py
bot/src/extensions/utility/: invite.py  team.py  uptime.py
bot/src/tools/: log_manager.py
bot/src/ui/: button.py  modal.py
bot/src/winter_dragon/bot/: ListConfig.py  __init__.py  __main__.py  config.ini  config.py  constants.py  sentry.py  settings.py
bot/src/winter_dragon/bot/_types/: aliases.py  dicts.py  kwargs.py  protocols.py
bot/src/winter_dragon/bot/base/: bot_guild.py  lobby.py
bot/src/winter_dragon/bot/core/: bot.py  cogs.py  error_handler.py  guild.py  log.py  tasks.py
bot/src/winter_dragon/bot/enums/: activity.py  channels.py
bot/src/winter_dragon/bot/errors/: __init__.py  aliases.py  config.py
bot/src/winter_dragon/bot/events/: app_command_permission_update.py  automod_block_message.py  automod_flag_message.py  automod_rule_create.py  automod_rule_delete.py  automod_rule_update.py  automod_timeout_member.py  ban.py  bot_add.py  channel_create.py  channel_delete.py  channel_update.py  emoji_create.py  emoji_delete.py  emoji_update.py  guild_update.py  integration_create.py  integration_delete.py  integration_update.py  invite_create.py  kick.py  (+33 more)
bot/tools/: __init__.py  arg_config.py  msg_checks.py  rainbow.py  strings.py  ttt_ai.py
bot/types/: __init__.py  bot.py  button.py  cogs.py  dicts.py  error_handler.py  lobby.py  mixins.py  modal.py  tasks.py
bot/ui/: button.py  modal.py
database/: SteamPage.html  __init__.py  constants.py  db  dockerfile  engine.py  hello.py  pyproject.toml  session.py
database/src/: constants.py  logger.py
database/src/database/: __init__.py  channels.py
database/src/database/tables/: __init__.py  commandgroup.py  guild.py  message.py  presence.py  role.py  steamsale.py  syncban.py  wyrquestion.py
database/src/tables/: autoassignrole.py  definitions.py  lobby.py  lobbystatus.py  syncbanguild.py  userroles.py
database/src/tables/incremental/: player.py
database/src/winter_dragon/database/: __init__.py  auto_increment.py  channeltypes.py  constants.py  keys.py  logger.py  select.py
database/tables/: AuditLog.py  AutoAssignRole.py  AutoChannel.py  AutoChannelSettings.py  Base.py  Channel.py  ColorCodes.py  Command.py  CommandGroup.py  DisabledCommands.py  Game.py  Guild.py  Hangman.py  Infractions.py  Lobby.py  LobbyStatus.py  LookingForGroup.py  Message.py  NhieQuestion.py  Presence.py  Reminder.py  ResultDuels.py  ResultMassiveMultiplayer.py  Role.py  SteamSale.py  SteamUser.py  Suggestion.py  SyncBan.py  SyncBanGuild.py  User.py  UserRoles.py  Welcome.py  WyrQuestion.py  __init__.py  associations.py  auditlog.py  autoassignrole.py  autochannel.py  autochannelsettings.py  autoreassign.py  (+40 more)
database/tables/associations/: AssociationUserCommand.py  AssociationUserHangman.py  AssociationUserLobby.py  GuildCommands.py  GuildRoles.py  __init__.py  associationusercommand.py  associationuserhangman.py  associationuserlobby.py  guildcommands.py  guildroles.py
database/tables/github/: branch.py  github.py  tag.py
database/tables/incremental/: __init__.py  currency.py  generators.py  player.py
(+975 files in other folders)
