[project]
name = "winter-dragon"
version = "0.3.0"
description = "A versatile Discord bot with moderation, utility, and entertainment features"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
  {name = "HEROgold", email = "martijnwieringa28@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Chat",
  "Topic :: Internet",
  "Framework :: AsyncIO"
]
dependencies = [
  "bs4>=0.0.2",
  "cassiopeia>=5.2.0",
  "confkit==1.0.0",
  "discord-ext-prometheus>=0.2.1",
  "discord-py>=2.6.3",
  "herogold>=1.1.0",
  "matplotlib>=3.10.7",
  "psutil>=7.2.2",
  "psycopg2-binary>=2.9.11",
  "requests>=2.32.5",
  "sentry-sdk>=2.51.0",
  "sqlmodel>=0.0.31"
]

[tool.uv]
package = true
