[project]
name = "winter-dragon"
version = "0.3.0"
description = "A versatile Discord bot with moderation, utility, and entertainment features"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
  {name = "HEROgold", email = "martijnwieringa28@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Chat",
  "Topic :: Internet",
  "Framework :: AsyncIO"
]
dependencies = [
  "bs4>=0.0.2",
  "cassiopeia>=5.2.0",
  "confkit==1.1.0",
  "discord-ext-prometheus>=0.2.1",
  "discord-py>=2.6.4",
  "herogold>=1.1.0",
  "matplotlib>=3.10.8",
  "psutil>=7.2.2",
  "psycopg2-binary>=2.9.11",
  "redis>=5.0.0",
  "requests>=2.32.5",
  "rq>=1.16.0",
  "sentry-sdk>=2.52.0",
  "sqlmodel>=0.0.32",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.128.2"
]

[tool.uv]
package = true
