[project]
name = "winter-dragon-backend"
version = "0.1.0"
description = "Backend API for Winter Dragon Discord Bot"
readme = "README.md"
authors = [
    { name = "HEROgold", email = "martijnwieringa28@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.28",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "redis>=5.0.2",
    "alembic>=1.13.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.4",
]

[project.scripts]
winter-dragon-api = "winter_dragon.backend.__main__:main"
