[project]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "discord-ext-prometheus>=0.2.0",
    "discord-py>=2.4.0",
    "matplotlib>=3.10.0",
    "psutil>=6.1.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
]
description = "Add your description here"
name = "bot"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
