[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HEROgold", email = "martijnwieringa28@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "discord>=2.3.2",
    "discord-ext-prometheus>=0.2.1",
    "matplotlib>=3.10.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.24",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.4",
    "database",
]

[project.scripts]
bot = "bot:main"

[tool.uv.sources]
database = { workspace = true }
