[project]
name = "database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HEROgold", email = "martijnwieringa28@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.24",
]

[project.scripts]
database = "database:main"
