[project]
name = "database"
version = "0.1.1"
description = "Database models and operations for Winter Dragon Bot"
readme = "README.md"
authors = [
    { name = "HEROgold", email = "martijnwieringa28@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.24",
    "psycopg2-binary>=2.9.10",
]

[project.scripts]
database = "database:main"
